--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,5 @@
-couchdb.protocol=http
-couchdb.host=192.168.1.102
-couchdb.port=5984
-couchdb.name=dicom
-couchdb.username=
-couchdb.password=
-hbase.host=192.168.1.102
-hbase.port=2181
+pgsql.url=jdbc:postgresql://192.168.56.101/dicom
+pgsql.username=postgres
+pgsql.password=
+cassandra.host=192.168.56.101
+cassandra.port=9042
